# graphy-social

./: README.md  edges.csv  graph.pickle  load_friends.py  pyproject.toml  ruslan_sirazhetdinov_vk_graph_analysys.ipynb
